2nd way of showing charts added,

--- a/First Project/Stock Market.ipynb
+++ b/First Project/Stock Market.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from datetime import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "import yfinance as yf\n",
+    "from datetime import datetime\n",
     "import plotly.express as px"
    ]
   },
@@ -25,11 +27,11 @@
     "GOOGL = Data[9357:12476]\n",
     "AAPL = Data[12476:]\n",
     "tlist = [AMZN, FB, TSLA, GOOGL, AAPL]\n",
-    "tickers = ['AMZN', 'FB', 'TSLA', 'GOOGL', 'AAPL']"
+    "tickers = ['AMZN', 'FB', 'TSLA', 'GOOGL', 'AAPL']\n",
+    "AMZN"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -37,7 +39,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,7 +55,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -71,7 +71,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -88,7 +87,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -105,7 +103,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -137,7 +134,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "xax = list(AAPL['Date'])\n",
+    "yax = list(AAPL['Open'])\n",
+    "xs = [datetime.strptime(x, \"%Y-%m-%d\") for x in xax]\n",
+    "plt.plot(xs, yax)\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -156,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
