Buy option added, not complete

--- a/First Project/Stock Market.ipynb
+++ b/First Project/Stock Market.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,22 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Data = pd.read_csv('stock_market_data.csv')\n",
+    "Data = pd.read_csv('First Project/stock_market_data.csv')\n",
     "AMZN = Data[:3119]\n",
     "FB = Data[3119:6238]\n",
     "TSLA = Data[3119:9357]\n",
     "GOOGL = Data[9357:12476]\n",
     "AAPL = Data[12476:]\n",
     "tlist = [AMZN, FB, TSLA, GOOGL, AAPL]\n",
-    "tickers = ['AMZN', 'FB', 'TSLA', 'GOOGL', 'AAPL']\n",
-    "AMZN"
+    "tickers = ['AMZN', 'FB', 'TSLA', 'GOOGL', 'AAPL']"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -39,6 +39,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +56,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +73,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,6 +90,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -95,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,10 +107,46 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Thanks for your registration, now you have access to trade in Stock market"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "to buy shares:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your Balance is : 2\n",
+      "192.5800018310547\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Your Balance is : {Balance}')\n",
+    "pick = int(input('''to buy shares, please enter the ticker's number:\n",
+    "1- AMZN\n",
+    "2- FB\n",
+    "3- TSLA\n",
+    "4- GOOGL\n",
+    "5- AAPL'''))\n",
+    "curr_price = list(tlist[pick-1]['Open'])[-1]\n",
+    "print(curr_price)\n",
+    "to_buy = float(input(f'{tickers[pick-1]} price is {curr_price} per share, how many shares do you want to buy?'))"
    ]
   },
   {
@@ -115,16 +155,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('''to check the charts, please enter the ticker's number:\n",
+    "num = int(input('''to check the charts, please enter the ticker's number:\n",
     "1- AMZN\n",
     "2- FB\n",
     "3- TSLA\n",
     "4- GOOGL\n",
-    "5- AAPL''')\n",
-    "num = int(input())\n",
+    "5- AAPL'''))\n",
     "if num in range(1,6):\n",
     "    fig = px.line(tlist[num-1], x = 'Date', y = 'Open', title=f'{tickers[num-1]} Share Prices')\n",
     "    fig.show()\n",
+    "    xax = list(tlist[num-1]['Date'])\n",
+    "    yax = list(tlist[num-1]['Open'])\n",
+    "    xs = [datetime.strptime(x, \"%Y-%m-%d\") for x in xax]\n",
+    "    plt.plot(xs, yax)\n",
+    "    plt.show()\n",
     "else:\n",
     "    print(\"Wrong ticker number!\")"
    ]
@@ -134,13 +178,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "xax = list(AAPL['Date'])\n",
-    "yax = list(AAPL['Open'])\n",
-    "xs = [datetime.strptime(x, \"%Y-%m-%d\") for x in xax]\n",
-    "plt.plot(xs, yax)\n",
-    "plt.show()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
