buy option completed, sell option added

--- a/Stock Market.ipynb
+++ b/Stock Market.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,10 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "### DATA IMPORT ###\n",
     "Data = pd.read_csv('First Project/stock_market_data.csv')\n",
     "AMZN = Data[:3119]\n",
     "FB = Data[3119:6238]\n",
@@ -28,6 +29,16 @@
     "AAPL = Data[12476:]\n",
     "tlist = [AMZN, FB, TSLA, GOOGL, AAPL]\n",
     "tickers = ['AMZN', 'FB', 'TSLA', 'GOOGL', 'AAPL']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### USER DATABASE ###\n",
+    "user_shares = {}"
    ]
   },
   {
@@ -48,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,18 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your Balance is : 2\n",
-      "192.5800018310547\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'Your Balance is : {Balance}')\n",
     "pick = int(input('''to buy shares, please enter the ticker's number:\n",
@@ -143,10 +145,67 @@
     "2- FB\n",
     "3- TSLA\n",
     "4- GOOGL\n",
-    "5- AAPL'''))\n",
+    "5- AAPL\n",
+    "'''))\n",
     "curr_price = list(tlist[pick-1]['Open'])[-1]\n",
-    "print(curr_price)\n",
-    "to_buy = float(input(f'{tickers[pick-1]} price is {curr_price} per share, how many shares do you want to buy?'))"
+    "to_buy = float(input(f'{tickers[pick-1]} price is {curr_price} per share, how many shares do you want to buy?'))\n",
+    "if(to_buy * curr_price > Balance):\n",
+    "    print(\"Insufficient Balance\")\n",
+    "else:\n",
+    "    Balance -= to_buy * curr_price\n",
+    "    if tickers[pick-1] in user_shares.keys():\n",
+    "        user_shares[tickers[pick-1]] += to_buy\n",
+    "    else:\n",
+    "        user_shares[tickers[pick-1]] = to_buy\n",
+    "    print(f'You have successfully buy {to_buy} shares of {tickers[pick-1]}, your new Balance is : {Balance}')\n",
+    "        "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "to sell shares:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {'Shares': list(user_shares.keys()), 'Quantities': list(user_shares.values())}\n",
+    "df2 = pd.DataFrame(data=d)\n",
+    "print(df2)\n",
+    "print(f'Your Shares are listed Below :')\n",
+    "pick = int(input('''to sell shares, please enter the ticker's number:\n",
+    "1- AMZN\n",
+    "2- FB\n",
+    "3- TSLA\n",
+    "4- GOOGL\n",
+    "5- AAPL\n",
+    "'''))\n",
+    "if tickers[pick-1] in user_shares.keys():   \n",
+    "    curr_price = list(tlist[pick-1]['Open'])[-1]\n",
+    "    to_sell = float(input(f'{tickers[pick-1]} price is {curr_price} per share and you have {user_shares[tickers[pick-1]]} shares, how many shares of yours do you want to sell?'))\n",
+    "    if(to_sell > float(user_shares[tickers[pick-1]])):\n",
+    "        print(\"Insufficient Shares!\")\n",
+    "    else:\n",
+    "        user_shares[tickers[pick-1]] -= to_sell\n",
+    "        Balance += to_sell * curr_price\n",
+    "        print(f'You have successfully sell {to_sell} shares of {tickers[pick-1]}, your new Balance is : {Balance}')\n",
+    "else:\n",
+    "    print(f'You do not have any {tickers[pick-1]} shares in your portfolio!')\n",
+    "        "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "to check charts:"
    ]
   },
   {
@@ -160,7 +219,8 @@
     "2- FB\n",
     "3- TSLA\n",
     "4- GOOGL\n",
-    "5- AAPL'''))\n",
+    "5- AAPL\n",
+    "'''))\n",
     "if num in range(1,6):\n",
     "    fig = px.line(tlist[num-1], x = 'Date', y = 'Open', title=f'{tickers[num-1]} Share Prices')\n",
     "    fig.show()\n",
